# audioMancer

./: .gitattributes  .gitignore  README.md  config.json  live_transcribe.py  pyproject.toml  transcribe.py  volume_history.json
.github/workflows/: build-installers.yml
packaging/: README.md  generate_icons.py  pyinstaller.spec
packaging/macos/: icon.icns
packaging/windows/: installer.iss
src/dm_mixer/: __main__.py  app.py  audio.py  context_analysis.py  context_config.py  logging_setup.py  speech.py  stt.py  studio.py  utils.py
tests/: test_audio.py  test_config.py  test_context_analysis.py  test_logging_setup.py  test_speech.py  test_stt.py  test_studio.py
