[project]
name = "dm-mixer"
version = "1.0.0"
description = "A voice-activated automated audio mixer dashboard for Dungeon Masters."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pygame>=2.5.0",
    "spacy>=3.8.0,<3.9.0",
    "en-core-web-sm",
]

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-cov>=5.0.0"]
build = ["pyinstaller>=6.0.0", "pyinstaller-hooks-contrib>=2024.0", "pillow>=10.0.0"]

[project.scripts]
dm-mixer = "dm_mixer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=dm_mixer --cov-report=term-missing"

[tool.coverage.run]
source = ["dm_mixer"]
omit = [
    "*/dm_mixer/__main__.py",
    "*/dm_mixer/__init__.py",
    "*/dm_mixer/app.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
